Fixed image paths for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <label><input type="checkbox" id="toggleKeypoints" checked> Keypoints</label>
             <label><input type="checkbox" id="toggleSkeleton" checked> Skeleton</label>
             
-            <link rel="stylesheet" href="src/style.css">
+            <link rel="stylesheet" href="/src/style.css">
 
             <!-- <h3>Select Keypoints:</h3>
             <label><input type="checkbox" id="nose" checked> Nose</label>
@@ -45,20 +45,20 @@
         <!-- Image Selection -->
         <h3>Select an Image:</h3>
         <div id="imageSelector">
-            <img src="public/images/glass.png" class="image-option" data-image="public/images/glass.png">
-            <img src="public/images/dog.png" class="image-option" data-image="public/images/dog.png">
-            <img src="public/images/eye.png" class="image-option" data-image="public/images/eye.png">
-            <img src="public/images/cat.png" class="image-option" data-image="public/images/cat.png">
-            <img src="public/images/evil_horn_eye.png" class="image-option" data-image="public/images/evil_horn_eye.png">
-            <img src="public/images/flower_hairband.png" class="image-option" data-image="public/images/flower_hairband.png">
-            <img src="public/images/neon_facemask.png" class="image-option" data-image="public/images/neon_facemask.png">
-            <img src="public/images/skeleton_mask.png" class="image-option" data-image="public/images/skeleton_mask.png">
-            <img src="public/images/bald.png" class="image-option" data-image="public/images/bald.png">
-            <img src="public/images/bald_hair.png" class="image-option" data-image="public/images/bald_hair.png">
+            <img src="/public/images/glass.png" class="image-option" data-image="/public/images/glass.png">
+            <img src="/public/images/dog.png" class="image-option" data-image="/public/images/dog.png">
+            <img src="/public/images/eye.png" class="image-option" data-image="/public/images/eye.png">
+            <img src="/public/images/cat.png" class="image-option" data-image="/public/images/cat.png">
+            <img src="/public/images/evil_horn_eye.png" class="image-option" data-image="/public/images/evil_horn_eye.png">
+            <img src="/public/images/flower_hairband.png" class="image-option" data-image="/public/images/flower_hairband.png">
+            <img src="/public/images/neon_facemask.png" class="image-option" data-image="/public/images/neon_facemask.png">
+            <img src="/public/images/skeleton_mask.png" class="image-option" data-image="/public/images/skeleton_mask.png">
+            <img src="/public/images/bald.png" class="image-option" data-image="/public/images/bald.png">
+            <img src="/public/images/bald_hair.png" class="image-option" data-image="/public/images/bald_hair.png">
         </div>
         
 
-        <script src="src/sketch.js"></script>
+        <script src="/src/sketch.js"></script>
 
     </body>
 </html>
