Fixed static file paths

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <label><input type="checkbox" id="toggleKeypoints" checked> Keypoints</label>
             <label><input type="checkbox" id="toggleSkeleton" checked> Skeleton</label>
             
-            <link rel="stylesheet" href="/src/style.css">
+            <link rel="stylesheet" href="/public/css/style.css">
 
             <!-- <h3>Select Keypoints:</h3>
             <label><input type="checkbox" id="nose" checked> Nose</label>
@@ -58,7 +58,7 @@
         </div>
         
 
-        <script src="/src/sketch.js"></script>
+        <script src="public/js/sketch.js"></script>
 
     </body>
 </html>
