--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
         <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
+        <link rel="stylesheet" href="/css/style.css">
+
         <link rel="icon" href="data:,">
         <meta charset="UTF-8"/>
     </head>
@@ -19,8 +21,6 @@
         <div id="controls">
             <label><input type="checkbox" id="toggleKeypoints" checked> Keypoints</label>
             <label><input type="checkbox" id="toggleSkeleton" checked> Skeleton</label>
-            
-            <link rel="stylesheet" href="/public/css/style.css">
 
             <!-- <h3>Select Keypoints:</h3>
             <label><input type="checkbox" id="nose" checked> Nose</label>
@@ -45,20 +45,20 @@
         <!-- Image Selection -->
         <h3>Select an Image:</h3>
         <div id="imageSelector">
-            <img src="/public/images/glass.png" class="image-option" data-image="/public/images/glass.png">
-            <img src="/public/images/dog.png" class="image-option" data-image="/public/images/dog.png">
-            <img src="/public/images/eye.png" class="image-option" data-image="/public/images/eye.png">
-            <img src="/public/images/cat.png" class="image-option" data-image="/public/images/cat.png">
-            <img src="/public/images/evil_horn_eye.png" class="image-option" data-image="/public/images/evil_horn_eye.png">
-            <img src="/public/images/flower_hairband.png" class="image-option" data-image="/public/images/flower_hairband.png">
-            <img src="/public/images/neon_facemask.png" class="image-option" data-image="/public/images/neon_facemask.png">
-            <img src="/public/images/skeleton_mask.png" class="image-option" data-image="/public/images/skeleton_mask.png">
-            <img src="/public/images/bald.png" class="image-option" data-image="/public/images/bald.png">
-            <img src="/public/images/bald_hair.png" class="image-option" data-image="/public/images/bald_hair.png">
+            <img src="/images/glass.png" class="image-option" data-image="/images/glass.png">
+            <img src="/images/dog.png" class="image-option" data-image="/images/dog.png">
+            <img src="/images/eye.png" class="image-option" data-image="/images/eye.png">
+            <img src="/images/cat.png" class="image-option" data-image="/images/cat.png">
+            <img src="/images/evil_horn_eye.png" class="image-option" data-image="/images/evil_horn_eye.png">
+            <img src="/images/flower_hairband.png" class="image-option" data-image="/images/flower_hairband.png">
+            <img src="/images/neon_facemask.png" class="image-option" data-image="/images/neon_facemask.png">
+            <img src="/images/skeleton_mask.png" class="image-option" data-image="/images/skeleton_mask.png">
+            <img src="/images/bald.png" class="image-option" data-image="/images/bald.png">
+            <img src="/images/bald_hair.png" class="image-option" data-image="/images/bald_hair.png">
         </div>
         
 
-        <script src="public/js/sketch.js"></script>
+        <script src="/js/sketch.js"></script>
 
     </body>
 </html>
