Fixed CSS and image paths

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
         </div>
         
 
-        <script src="/js/sketch.js"></script>
+        <script src="{% static '/js/sketch.js' %}"></script>
 
     </body>
 </html>
