Fixed CSS and image paths

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,6 @@
         </div>
         
 
-        <script src="{% static '/js/sketch.js' %}"></script>
-
+        <link src="/js/sketch.js"/>
     </body>
 </html>
