--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
         <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
         <!-- <link rel="stylesheet" href="\css\style.css"> -->
-        <link href="/css/styles.css" type="text/html" />
+        <!-- <link href="/css/styles.css" type="text/html" /> -->
+        <link rel="stylesheet" type="text/css" href="/css/styles.css">
 
         <link rel="icon" href="data:,">
         <meta charset="UTF-8"/>
