--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,11 @@
 
         <!-- <link rel="stylesheet" href="\css\style.css"> -->
         <!-- <link href="/css/styles.css" type="text/html" /> -->
-        <link rel="stylesheet" type="text/css" href="/css/styles.css">
+        <!-- <link rel="stylesheet" type="text/css" href="/css/styles.css"> -->
+
+        <style>
+            @import url("/css/styles.css");
+        </style>            
 
         <link rel="icon" href="data:,">
         <meta charset="UTF-8"/>
