--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
         <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
 
-        <!-- <link rel="stylesheet" href="\css\style.css"> -->
+        <link src="\css\style.css">
         <!-- <link href="/css/styles.css" type="text/html" /> -->
         <!-- <link rel="stylesheet" type="text/css" href="/css/styles.css"> -->
 
-        <style>
+        <!-- <style>
             @import url("/css/styles.css");
-        </style>            
+        </style>             -->
 
         <link rel="icon" href="data:,">
         <meta charset="UTF-8"/>
