Fixed CSS and image paths

--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,8 @@
         <!-- Image Selection -->
         <h3>Select an Image:</h3>
         <div id="imageSelector">
-            <img src="/images/glass.png" class="image-option" data-image="/images/glass.png">
-            <img src="/images/dog.png" class="image-option" data-image="/images/dog.png">
+            <img src="/assets/images/glass.png" class="image-option" data-image="/assets/images/glass.png">
+            <img src="/assets/images/dog.png" class="image-option" data-image="/assets/images/dog.png">
             <img src="/images/eye.png" class="image-option" data-image="/images/eye.png">
             <img src="/images/cat.png" class="image-option" data-image="/images/cat.png">
             <img src="/images/evil_horn_eye.png" class="image-option" data-image="/images/evil_horn_eye.png">
