--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
         <title>FaceUp</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-        <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+        <!-- <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script> -->
+        <script src="https://unpkg.com/ml5@latest/dist/ml5.js"></script>
+
 
         <link src="\css\style.css">
         <!-- <link href="/css/styles.css" type="text/html" /> -->
