Fixed CSS and image paths

--- a/public/index.html
+++ b/public/index.html
@@ -53,16 +53,16 @@
         <!-- Image Selection -->
         <h3>Select an Image:</h3>
         <div id="imageSelector">
-            <img src="/assets/images/glass.png" class="image-option" data-image="/assets/images/glass.png">
+            <img src="./assets/images/glass.png" class="image-option" data-image="./assets/images/glass.png">
             <img src="/assets/images/dog.png" class="image-option" data-image="/assets/images/dog.png">
-            <img src="/images/eye.png" class="image-option" data-image="/images/eye.png">
-            <img src="/images/cat.png" class="image-option" data-image="/images/cat.png">
-            <img src="/images/evil_horn_eye.png" class="image-option" data-image="/images/evil_horn_eye.png">
-            <img src="/images/flower_hairband.png" class="image-option" data-image="/images/flower_hairband.png">
-            <img src="/images/neon_facemask.png" class="image-option" data-image="/images/neon_facemask.png">
-            <img src="/images/skeleton_mask.png" class="image-option" data-image="/images/skeleton_mask.png">
-            <img src="/images/bald.png" class="image-option" data-image="/images/bald.png">
-            <img src="/images/bald_hair.png" class="image-option" data-image="/images/bald_hair.png">
+            <img src="/assets/images/eye.png" class="image-option" data-image="/assets/images/eye.png">
+            <img src="/assets/images/cat.png" class="image-option" data-image="/assets/images/cat.png">
+            <img src="/assets/images/evil_horn_eye.png" class="image-option" data-image="/assets/images/evil_horn_eye.png">
+            <img src="/assets/images/flower_hairband.png" class="image-option" data-image="/assets/images/flower_hairband.png">
+            <img src="/assets/images/neon_facemask.png" class="image-option" data-image="/assets/images/neon_facemask.png">
+            <img src="/assets/images/skeleton_mask.png" class="image-option" data-image="/assets/images/skeleton_mask.png">
+            <img src="/assets/images/bald.png" class="image-option" data-image="/assets/images/bald.png">
+            <img src="/assets/images/bald_hair.png" class="image-option" data-image="/assets/images/bald_hair.png">
         </div>
         
 
