Improve style.css

--- a/public/index.html
+++ b/public/index.html
@@ -7,20 +7,24 @@
         <title>FaceUp</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-        <!-- <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script> -->
-        <script src="https://unpkg.com/ml5@latest/dist/ml5.js"></script>
+        <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+        <!-- <script src="https://unpkg.com/ml5@latest/dist/ml5.js"></script> -->
 
 
-        <link src="\css\style.css">
+        <!-- <link src="\css\style.css"> -->
         <!-- <link href="/css/styles.css" type="text/html" /> -->
         <!-- <link rel="stylesheet" type="text/css" href="/css/styles.css"> -->
+        <link rel="stylesheet" href="/css/styles.css">
+
 
         <!-- <style>
             @import url("/css/styles.css");
         </style>             -->
 
+        <!-- Favicon -->
         <link rel="icon" href="data:,">
-        <meta charset="UTF-8"/>
+
+        <!-- <meta charset="UTF-8"/> -->
     </head>
     <body>
         <h1>FaceUp</h1>
@@ -65,7 +69,8 @@
             <img src="/assets/images/bald_hair.png" class="image-option" data-image="/assets/images/bald_hair.png">
         </div>
         
+    <!-- External JavaScript -->
+    <script src="./js/sketch.js"></script>
 
-        <link src="/js/sketch.js"/>
     </body>
 </html>
