--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <!-- <link src="\css\style.css"> -->
         <!-- <link href="/css/styles.css" type="text/html" /> -->
         <!-- <link rel="stylesheet" type="text/css" href="/css/styles.css"> -->
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css" type="text/css">
 
 
         <!-- <style>
