Fixed CSS and image paths

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <!-- <link src="\css\style.css"> -->
         <!-- <link href="/css/styles.css" type="text/html" /> -->
         <!-- <link rel="stylesheet" type="text/css" href="/css/styles.css"> -->
-        <link rel="stylesheet" href="/css/styles.css" type="text/css">
+        <link rel="stylesheet" href="/styles.css" type="text/css">
 
 
         <!-- <style>
@@ -70,7 +70,7 @@
         </div>
         
     <!-- External JavaScript -->
-    <script src="./js/sketch.js"></script>
+    <script src="/sketch.js"></script>
 
     </body>
 </html>
