Fixed CSS and image paths

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <!-- <link src="\css\style.css"> -->
         <!-- <link href="/css/styles.css" type="text/html" /> -->
         <!-- <link rel="stylesheet" type="text/css" href="/css/styles.css"> -->
-        <link rel="stylesheet" href="/styles.css" type="text/css">
+        <link rel="stylesheet" href="/style.css" type="text/css">
 
 
         <!-- <style>
@@ -58,10 +58,10 @@
         <h3>Select an Image:</h3>
         <div id="imageSelector">
             <img src="./assets/images/glass.png" class="image-option" data-image="./assets/images/glass.png">
-            <img src="/assets/images/dog.png" class="image-option" data-image="/assets/images/dog.png">
-            <img src="/assets/images/eye.png" class="image-option" data-image="/assets/images/eye.png">
-            <img src="/assets/images/cat.png" class="image-option" data-image="/assets/images/cat.png">
-            <img src="/assets/images/evil_horn_eye.png" class="image-option" data-image="/assets/images/evil_horn_eye.png">
+            <img src="./assets/images/dog.png" class="image-option" data-image="/assets/images/dog.png">
+            <img src="./assets/images/eye.png" class="image-option" data-image="/assets/images/eye.png">
+            <img src="./assets/images/cat.png" class="image-option" data-image="/assets/images/cat.png">
+            <img src="./assets/images/evil_horn_eye.png" class="image-option" data-image="/assets/images/evil_horn_eye.png">
             <img src="/assets/images/flower_hairband.png" class="image-option" data-image="/assets/images/flower_hairband.png">
             <img src="/assets/images/neon_facemask.png" class="image-option" data-image="/assets/images/neon_facemask.png">
             <img src="/assets/images/skeleton_mask.png" class="image-option" data-image="/assets/images/skeleton_mask.png">
