Fixed CSS and image paths

--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@
         <!-- Image Selection -->
         <h3>Select an Image:</h3>
         <div id="imageSelector">
-            <img src="/public/assets/images/glass.png" class="image-option" data-image="/public/assets/images/glass.png">
-            <img src="/public/assets/images/dog.png" class="image-option" data-image="/public/assets/images/dog.png">
-            <img src="/public/assets/images/eye.png" class="image-option" data-image="/public/assets/images/eye.png">
-            <img src="/public/assets/images/cat.png" class="image-option" data-image="/public/assets/images/cat.png">
-            <img src="/public/assets/images/evil_horn_eye.png" class="image-option" data-image="/public/assets/images/evil_horn_eye.png">
-            <img src="/public/assets/images/flower_hairband.png" class="image-option" data-image="/public/assets/images/flower_hairband.png">
-            <img src="/public/assets/images/neon_facemask.png" class="image-option" data-image="/public/assets/images/neon_facemask.png">
-            <img src="/public/assets/images/skeleton_mask.png" class="image-option" data-image="/public/assets/images/skeleton_mask.png">
-            <img src="/public/assets/images/bald.png" class="image-option" data-image="/public/assets/images/bald.png">
-            <img src="/public/assets/images/bald_hair.png" class="image-option" data-image="/public/assets/images/bald_hair.png">
+            <img src="/images/glass.png" class="image-option" data-image="/images/glass.png">
+            <img src="/images/dog.png" class="image-option" data-image="/images/dog.png">
+            <img src="/images/eye.png" class="image-option" data-image="/images/eye.png">
+            <img src="/images/cat.png" class="image-option" data-image="/images/cat.png">
+            <img src="/images/evil_horn_eye.png" class="image-option" data-image="/images/evil_horn_eye.png">
+            <img src="/images/flower_hairband.png" class="image-option" data-image="/images/flower_hairband.png">
+            <img src="/images/neon_facemask.png" class="image-option" data-image="/images/neon_facemask.png">
+            <img src="/images/skeleton_mask.png" class="image-option" data-image="/images/skeleton_mask.png">
+            <img src="/images/bald.png" class="image-option" data-image="/images/bald.png">
+            <img src="/images/bald_hair.png" class="image-option" data-image="/images/bald_hair.png">
         </div>
         
     <!-- External JavaScript -->
-    <script src="/sketch.js"></script>
+    <link src="/sketch.js"></body></link>
 
     </body>
 </html>
