--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <title>FaceUp</title>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-        <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+        <!-- <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ml5/0.12.2/ml5.min.js"></script>
         <!-- <script src="https://unpkg.com/ml5@latest/dist/ml5.js"></script> -->
 
 
