Fixed CSS and image paths

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         
     <!-- External JavaScript -->
-    <link src="/sketch.js"></link>
+    <script src="/sketch.js"></script>
 
     </body>
 </html>
