--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
             <img src="/images/bald_hair.png" class="image-option" data-image="/images/bald_hair.png">
         </div>
         
+        <footer>
+            <p>© 2025 FaceUp. All rights reserved.</p>
+            <p>Developed by <a href="https://linkedin.com/in/sourabh-kumar04" target="_blank">Sourabh Kumar</a></p>
+        </footer>
+        
+
     <!-- External JavaScript -->
     <script src="/sketch.js"></script>
 
